# p5-tuner

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pnpm-lock.yaml
public/: index.html
src/: App.tsx  button.css  button.js  herz_oct.js  index.css  index.js  state_display.js  toggle.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  main.rs
