[package]
name = "p5-tuner"
version = "0.1.0"
description = "Tauri app to tune pitches"
authors = ["tsumli"]
edition = "2024"

[lib]
name = "p5_tuner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.0"
arc-swap = "1.8.0"
anyhow = "1.0.100"
